--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-6 col-lg-4 mb-4">
+                <div class="col-12 col-lg-6 mb-4">
                     <div class="item_stunning">
                         <div class="icon">
                             <i class="icofont-chart-histogram-alt"></i>
@@ -793,7 +793,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-lg-4 mb-4">
+                <div class="col-12 col-lg-6 mb-4">
                     <div class="item_stunning">
                         <div class="icon">
                             <i class="icofont-star"></i>
@@ -806,7 +806,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-lg-4 mb-4">
+                <div class="col-12 col-lg-6 mb-4">
                     <div class="item_stunning">
                         <div class="icon">
                             <i class="icofont-chef"></i>
@@ -819,7 +819,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-lg-4 mb-4">
+                <div class="col-12 col-lg-6 mb-4">
                     <div class="item_stunning">
                         <div class="icon">
                             <i class="icofont-restaurant"></i>
@@ -833,33 +833,33 @@
                     </div>
                 </div>
 
-                <div class="col-6 col-lg-4 mb-4">
-                    <div class="item_stunning">
-                        <div class="icon">
-                            <i class="icofont-restaurant-menu"></i>
-                        </div>
-                        <div class="title">
-                            Thực đơn phong phú đa dạng
-                        </div>
-                        <div class="desc">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="col-6 col-lg-6 mb-4">-->
+<!--                    <div class="item_stunning">-->
+<!--                        <div class="icon">-->
+<!--                            <i class="icofont-restaurant-menu"></i>-->
+<!--                        </div>-->
+<!--                        <div class="title">-->
+<!--                            Thực đơn phong phú đa dạng-->
+<!--                        </div>-->
+<!--                        <div class="desc">-->
+<!--                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <div class="col-6 col-lg-4 mb-4">
-                    <div class="item_stunning">
-                        <div class="icon">
-                            <i class="icofont-fast-delivery"></i>
-                        </div>
-                        <div class="title">
-                            Giao hàng tận nơi
-                        </div>
-                        <div class="desc">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="col-6 col-lg-6 mb-4">-->
+<!--                    <div class="item_stunning">-->
+<!--                        <div class="icon">-->
+<!--                            <i class="icofont-fast-delivery"></i>-->
+<!--                        </div>-->
+<!--                        <div class="title">-->
+<!--                            Giao hàng tận nơi-->
+<!--                        </div>-->
+<!--                        <div class="desc">-->
+<!--                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
     </section>
